--- a/kontakt.html
+++ b/kontakt.html
@@ -1,89 +1,95 @@
 <!DOCTYPE html>
 <html lang="da">
 <head>
-    <!-- Grundlæggende sideinformation og link til eksterne ressourcer-->
+    <!-- Grundlæggende sideinformation og link til eksterne ressourcer -->
     <meta charset="UTF-8">
     <!-- Sørger for websiden skalerer korrekt på mobile enheder -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <title>PORTFOLIO</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>KONTAKT</title>
+    <!-- Link til eksternt CSS stylesheet -->
     <link rel="stylesheet" href="stylesheet.css">
+    <!-- Preconnect til Google Fonts, Roboto -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- Link til Google Fonts, Roboto -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
-
     <!-- Header med navigationslinks -->
     <header>
-
         <!-- Navigationsmenu med links til andre sider på websitet -->
-        <nav class="nav-container-forside">
-                <img src="logo-1.png" alt="LOGO" class="logo">
+        <nav class="navigation-container-forside">
+            <div class="navigation-indhold">
+                <img src="logo.png" alt="LOGO" class="logo">
                 <ul>
                     <li><a href="index.html">FORSIDE</a></li>
                     <li><a href="om-mig.html">OM MIG</a></li>
                     <li><a href="portfolio.html">PORTFOLIO</a></li>
-                    <li><a href="kontakt.html">KONTAKT</a></li>
+                    <li><a href="kontakt.html" class="active">KONTAKT</a></li>
                 </ul>
+            </div>
         </nav>
     </header>
 
-</head>
-<!-- Kontaktinformation og formular sektion -->
-<section class="contact-info">
-    <h1>KONTAKT</h1>
-    <div class="info-container">
-    <div class="info-text-contact">
-        <h2>Har jeg fanget din interesse?</h2>
-        <p>Du er velkommen til at udfylde kontaktformularen, sende en e-mail, eller kontakte mig direkte for en uforpligtende samtale. Jeg ser frem til at høre fra dig og muligheden for at arbejde sammen for at bidrage til at realisere dine kreative visioner.</p>
-        <div class="contact-details">
-            <div class="contact-item">
-                <img src="telefon-ikon.png" alt="Telefon" class="telefon-ikon">
-                <p>+45 31 33 65 64</p>
+    <!-- Hovedindholdet på siden -->
+    <main class="main-container-kontakt">
+        <!-- Kontaktinformation -->
+        <section class="kontakt-info">
+            <div class="info-container">
+                <div class="info-tekst">
+                    <h1>KONTAKT</h1>
+                    <h2>Har jeg fanget din interesse?</h2>
+                    <p class="brodtekst">Du er velkommen til at udfylde kontaktformularen, sende en e-mail, eller kontakte mig direkte for en uforpligtende samtale. Jeg ser frem til at høre fra dig og muligheden for at arbejde sammen for at bidrage til at realisere dine kreative visioner.</p>
+                    <div class="kontakt-detajler">
+                        <div class="kontakt-item">
+                            <img src="telefon-ikon.png" alt="Telefon" class="ikon">
+                            <p>+45 31 33 65 64</p>
+                        </div>
+                        <div class="kontakt-item">
+                            <img src="mail-ikon.png" alt="E-mailadresse" class="ikon">
+                            <p>signe.gronning@gmail.com</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="kontakt-billede">
+                    <img src="migkontakt.png" alt="Signe Grønning">
+                </div>
             </div>
-            <div class="contact-item">
-                <img src="mail-ikon.png" alt="e-mailadresse" class="mail-ikon">
-                <p>signe.gronning@gmail.com</p>
+        </section>
+
+        <!-- Kontaktformular -->
+        <section class="kontakt-form">
+            <div class="formular-intro">
+                <h2>Kontakt mig!</h2>
+                <p>Jeg glæder mig til at høre fra dig og i fællesskab skabe enestående løsninger.</p>
             </div>
-        </div>
-    </div>
-    <div class="contact-image">
-        <img src="migkontakt.png" alt="Signe Grønning">
-    </div>
-</div>
-</section>
 
-
- <!-- Kontaktformular -->
- <section class="contact-form">
-    <h2>Kontakt mig!</h2>
-    <p>Jeg glæder mig til at høre fra dig og i fællesskab skabe enestående løsninger.</p>
-    <form action="submit.php" method="post">
-        <input type="text" placeholder="Dit navn" required>
-        <input type="email" placeholder="Din mail" required>
-        <textarea placeholder="Din besked" required></textarea>
-        <button type="submit">Send</button>
-    </form>
-</section>
-
+            <form action="submit.php" method="post">
+                <input type="text" id="name" name="name" placeholder="Dit navn" required>
+                <input type="email" id="email" name="email" placeholder="Din mail" required>
+                <textarea id="message" name="message" placeholder="Din besked" required></textarea>
+                <button type="submit">Send</button>
+            </form>
+        </section>
+    </main>
 
     <!-- Footer indeholder kontaktinformation og links til sociale medier -->
     <footer>
-        <!-- Kontakinformation -->
-        <div class="footer-info">
-        <img src="lokation.png" alt="lokation" class="lokation-ikon">
-        <address>Fengersvej 37, Odense M</address>
-        <!-- 'href="tel:"' Telefonnummer med direkte opkaldsfunktion -->
+        <div class="footer-tre-info">
+            <div class="footer-info">
+                <img src="lokation.png" alt="Lokation" class="ikon">
+                <address>Fengersvej 37, Odense M</address>
+            </div>
+            <div class="footer-info">
+                <img src="telefon-ikon.png" alt="Telefon" class="ikon">
+                <a href="tel:+4531335654">+45 31 33 56 54</a>
+            </div>
+            <div class="footer-info">
+                <img src="mail-ikon.png" alt="E-mailadresse" class="ikon">
+                <a href="mailto:signe.gronning@gmail.com">signe.gronning@gmail.com</a>
+            </div>
         </div>
-        <div class="footer-info">
-        <img src="telefon-ikon.png" alt="telefon" class="telefon-ikon">
-        <a href="tel:+4531335654">+45 31 33 56 54</a>
-        </div>
-        <div class="footer-info">
-        <!-- 'href="tel:"' E-mail med direkte mailfunktion -->
-        <img src="mail-ikon.png" alt="e-mailadresse" class="mail-ikon">
-        <a href="mailto:signe.gronning@gmail.com">signe.gronning@gmail.com</a>
-        </div>
-        
-        <!-- Links til sociale medie-profiler med ikoner -->
-        <div class="socialemedier">
+        <div class="sociale-medier">
             <a href="https://www.instagram.com/signe.groenning/"><img src="Insta-ikon.png" alt="Instagram"></a>
             <a href="https://www.linkedin.com/in/signe-grønning/"><img src="in-ikon.png" alt="LinkedIn"></a>
             <a href="https://www.facebook.com/signe.gronning"><img src="FB-ikon.png" alt="Facebook"></a>
@@ -91,4 +97,3 @@
     </footer>
 </body>
 </html>
-
