--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
                 <div class="design">
                     <div class="logo-billeder">
                         <img src="logo-ms.jpg" alt="Logo">
-                        <img src="Gallerri Galschiøt logo-5.png" alt="Design">
+                        <img src="Galschiot.png" alt="Design">
                     </div>
                     <div class="beskrivelse-logo">
                         <h2>Design</h2>
