rettelser 21 maj, media q

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
         <!-- Introduktion på forsiden -->
         <section class="hovedindhold-forside">
             <div class="introduktion-forside">
-                    <h1 class="navn-forside">Signe Grønning</h1>
-                    <p class="titel-forside">Multimediedesigner</p>
+                <h1 class="navn-forside">Signe Grønning</h1>
+                <p class="titel-forside">Multimediedesigner</p>
                 <h2>Jeg har erfaring i:</h2>
                 <p>Grafisk design, webdesign, designværktøjer, trends & tendenser og meget mere.</p>
-                <button class="laes-mere-knap">Læs mere</button>
+                <a href="om-mig.html" class="laes-mere-knap">Læs mere</a>
             </div>
             <!-- Billede der supplerer introduktionen -->
             <div class="billede-container-forside">
