--- a/portfolio.html
+++ b/portfolio.html
@@ -36,60 +36,62 @@
         <section class="portfolio">
             <h1>PORTFOLIO</h1>
             <div class="galleri">
-                <div class="projekt">
+                <section class="projekt">
                     <div class="produktbilleder">
                         <img src="citroner.jpg" alt="Produktbilleder">
-                        <img src="kaffe.jpg" alt="Produktbilleder">
+                        <img src="images/kaffe.jpg" alt="Produktbilleder">
                     </div>
                     <div class="beskrivelse">
                         <h2>Produktbilleder</h2>
-                        <p>Produktbilleder fotograferet i forskellige setups og redigeret i Adobe Lightroom.</p>
+                        <p>Produktbilleder fotograferet i MedieLab på UCL og efterfølgende nøje redigeret i Adobe Lightroom.</p>
                     </div>
-                </div>
-                <div class="design">
+                </section>
+                <section class="design">
                     <div class="logo-billeder">
                         <img src="logo-ms.jpg" alt="Logo">
                         <img src="Galschiot.png" alt="Design">
                     </div>
                     <div class="beskrivelse-logo">
                         <h2>Design</h2>
-                        <p>Re-design af logo til Galleri Galshiøt i samarbejde med teamet. Designet i Adobe InDesign.</p>
+                        <p>Re-design af logo til Galleri er designet i Canva samt et nyt personligt logo til hjemmeside og brand er designet i Adobe InDesign.</p>
                     </div>
-                </div>
-                <div class="portrait">
+                </section>
+                <section class="portrait">
                     <div class="portrait-billeder">
                         <img src="SIgne.jpeg" alt="portræt af Signe">
                         <img src="portrait.jpg" alt="Portræt">
                     </div>
                     <div class="beskrivelse">
                         <h2>Portræt</h2>
-                        <p>Portræt tegnet i Adobe Illustrator ud fra en ide og et foto.</p>
+                        <p>Portræt tegnet i Adobe Illustrator udelukkende ved brug af pen-tool funktionen. Inspiration fra personligt billede.</p>
                     </div>
-                </div>
-                <div class="branding">
+                </section>
+                <section class="branding">
                     <div class="brand-billeder">
                         <img src="forside.png" alt="visitkort forside">
                         <img src="bagside.png" alt="visitkort bagside">
                     </div>
                     <div class="beskrivelse-brand">
                         <h2>Branding</h2>
-                        <p>Design af visuelt stærkt logo og identitet. Produceret i Adobe Illustrator og Adobe InDesign.</p>
+                        <p>Design af visitkort og logo til et (fiktivt) bæredygtigt mode brand. Produceret i Adobe Illustrator og Adobe InDesign.</p>
                     </div>
-                </div>
-                <div class="portfolio-video">
-                    <iframe src="https://www.youtube.com/embed/qu4fMXsBrz4">
-                    </iframe>
+                </section>
+                <section class="video-sektion">
                     <div class="beskrivelse-video">
                         <h2>Video</h2>
-                        <p>Video er redigeret i Adobe Premiere Pro og visualiseret til en kampagne på UCL.</p>
+                        <p>Videoen er redigeret i Adobe Premiere Pro og videomaterialet er optaget på UCL. Videoen er stil med en TikTok.</p>
                     </div>
-                </div>                
-                <div class="animation">
+                    <div class="portfolio-video">
+                        <iframe src="https://www.youtube.com/embed/qu4fMXsBrz4"></iframe>
+                    </div>
+                </section>
+                <section class="animation">
+                    <div class="animation-ws"></div>
                     <div class="beskrivelse-animation">
                         <h2>Animation</h2>
-                        <p>Animationer skabt i Adobe Illustrator og derefter animeret i HTML, CSS og JavaScript for bedre engagement.</p>
+                        <p>Animationen er først tegnet i Adobe Illustrator og derefter kodet i HTML og CSS for at kunne bevæge sig.</p>
                     </div>
-                </div>
+                </section>
             </div>
         </section>
     </main>
